stylesheet.css
body,h1,h2,h3,h4,h5,h6 {
    font-family: "Raleway", sans-serif;
}

h2 {
  font-size: 24px;
}

h3 {
  text-transform: uppercase;
  font-size: 18px;
}

hr {
  border: 1px solid black;
}

a:focus, #prtf:focus, #abt:focus { 
  outline: 2px solid #009688; 
}

a:hover{
  font-weight: bold;
  color: #009688;
}

.back-button {
  border-radius: 30px;
  background-color: #009688;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin-top: 10px;
  margin-bottom: 10px;
  cursor: pointer;
}

.back-button:hover {
  font-weight: bold;
  color: white;
  background-color: #023935ff;
}

.fa-linkedin {
  margin-right: 7px;
}

#prtf {
  color:#009688;
}

.w3-section.w3-bottombar.w3-padding-10 {
  border-bottom: 2px solid #009688!important;
}

.w3-container.w3-light-grey.w3-round {
  height: 8.5rem;
  border: 2px solid #009688;
}

video {
  width: 100%;
  height: auto;
}

.flexible-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.flexible-container iframe,
.flexible-container object,
.flexible-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@media only screen and (max-width: 600px) {
  .w3-row.w3-padding-24 {
    padding-bottom: 0px!important;
  }
}
  

